[gd_scene load_steps=6 format=2]

[ext_resource path="res://textures/flatcolor.png" type="Texture" id=1]
[ext_resource path="res://scenes/toys/bubble.tres" type="Material" id=2]
[ext_resource path="res://scenes/toys/Bubble.gd" type="Script" id=3]
[ext_resource path="res://sprites/particles/droplet.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="Bubble" type="Area2D" groups=["no_pop_bubble"]]
collision_layer = 2
collision_mask = 858
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 2 )
position = Vector2( 16, 16 )
scale = Vector2( 32, 32 )
texture = ExtResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.4
texture = ExtResource( 4 )
flag_align_y = true
spread = 180.0
initial_velocity = 80.0
initial_velocity_random = 0.2
scale_amount = 0.5
color = Color( 1, 0, 0.772549, 1 )

[node name="RemoveTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Bubble_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bubble_body_entered"]
[connection signal="timeout" from="RemoveTimer" to="." method="_on_RemoveTimer_timeout"]
